Fix an issue with input alignment

--- a/src/components/sui-input/sui-input.scss
+++ b/src/components/sui-input/sui-input.scss
@@ -17,7 +17,7 @@
 
   .options-parent {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 100%;
     color: inherit;
